# crtmpserver

builders/cmake/thelib/: CMakeLists.txt
sources/common/include/platform/: platform.h
sources/common/include/platform/osx/: osxplatform.h
sources/thelib/include/mediaformats/readers/: basemediadocument.h
sources/thelib/src/configuration/: configfile.cpp
sources/thelib/src/mediaformats/readers/: streammetadataresolver.cpp
sources/thelib/src/protocols/rtmp/streaming/: infilertmpstream.cpp
sources/thelib/src/streaming/: baseinfilestream.cpp
